cmake_minimum_required( VERSION 2.8 )
SET( EXECUTABLE_OUTPUT_PATH "bin/" )
SET( LIBRARY_OUTPUT_PATH "lib/" )
project(input)
	FILE( GLOB_RECURSE input_SRCS src/Passion/Input/*.cpp )
	include_directories( "include" "extlibs/headers" )
	add_library( input STATIC ${input_SRCS} )
project(render)
	FILE( GLOB_RECURSE render_SRCS src/Passion/Render/*.cpp )
	include_directories( "include" "extlibs/headers" )
	link_directories( "${CMAKE_CURRENT_SOURCE_DIR}/extlibs/lib" )
	add_library( render STATIC ${render_SRCS} )
	target_link_libraries( render SOIL )
project(network)
	FILE( GLOB_RECURSE network_SRCS src/Passion/Network/*.cpp )
	include_directories( "include" )
	add_library( network STATIC ${network_SRCS} )
project(scripting)
	FILE( GLOB_RECURSE scripting_SRCS src/Passion/Scripting/*.cpp )
	include_directories( "include" "extlibs/headers" )
	link_directories( "${CMAKE_CURRENT_SOURCE_DIR}/extlibs/lib" )
	add_library( scripting STATIC ${scripting_SRCS} )
	target_link_libraries( scripting dl Lua )
project(passion)
	FILE( GLOB_RECURSE passion_SRCS passion/src/*.cpp )
	include_directories( "include" "extlibs/headers" )
	link_directories( "${CMAKE_CURRENT_SOURCE_DIR}/lib/" )
	add_executable( passion ${passion_SRCS} )
	target_link_libraries( passion input render network dl scripting )
